--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
         <a class="navbar-brand" href="#">
-            <img id="logo" src="" alt="">
-        </a>
+            <img id="logo" src="" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-links" 
             aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,8 +37,8 @@
             <p class="lead" id="banner-subtitle">Marketplace onde abrigos podem se comunicar, gerenciar seus estoques de itens essenciais e publicar pedidos de doação. </p>
         </div>
         <div class="banner-buttons">
-            <button class="btn-marketplace">Acesse o Marketplace</button>
-            <button class="btn-howtouse">Aprenda a usar</button>
+            <a href="pages/marketplace.html"><button class="btn-marketplace">Acesse o Marketplace</button></a>
+            <a href="como-funciona"><button class="btn-howtouse">Aprenda a usar</button></a>
         </div>
     </header>
 
