--- a/frontend/pages/marketplace.html
+++ b/frontend/pages/marketplace.html
@@ -1,118 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marketplace - Mercado Virtual de Resiliência</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body style="min-width:372px">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg border-bottom shadow-sm mb-3">
         <div class="container">
-            <a class="navbar-brand" href="index.html">logo</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle     navigation">
+            <a class="navbar-brand" href="#">
+                <img id="logo" src="" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle     navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Início</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="marketplace.html">Marketplace <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="marketplace.html">Marketplace <span
+                                class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
-                    </li>
+                </ul>
+            </div>
+            <div class="align-self-end">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="register.html">Cadastrar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Entrar</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header></header>
-    <main></main>
-    <!-- Main Content -->
-    <div class="container mt-5">
-        <div class="row">
-            <!-- Sidebar Filters -->
-            <div class="col-md-3">
-                <h4>Filtros</h4>
-                <form>
-                    <div class="form-group">
-                        <label for="category">Categoria</label>
-                        <select class="form-control" id="category">
-                            <option>Todos</option>
-                            <option>Alimentos</option>
-                            <option>Kits de Emergência</option>
-                            <option>Ferramentas</option>
-                            <option>Produtos Diversos</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="location">Localização</label>
-                        <select class="form-control" id="location">
-                            <option>Todas</option>
-                            <option>São Paulo</option>
-                            <option>Rio de Janeiro</option>
-                            <option>Belo Horizonte</option>
-                            <option>Curitiba</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Aplicar Filtros</button>
-                </form>
-            </div>
 
-            <!-- Marketplace Items -->
-            <div class="col-md-9">
-                <h4>Marketplace</h4>
-                <div class="row">
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <img class="card-img-top" src="assets/img/item1.jpg" alt="Item 1">
-                            <div class="card-body">
-                                <h5 class="card-title">Kit de Emergência</h5>
-                                <p class="card-text">Contém itens básicos para situações de emergência.</p>
-                                <a href="#" class="btn btn-primary">Ver Detalhes</a>
+    <header></header>
+
+    <!-- Main Content -->
+    <main>
+        <div class="container mt-5">
+            <div class="row">
+                <!-- Sidebar Filters -->
+                <div class="col-md-3">
+                    <h4>Filtros</h4>
+                    <form>
+                        <div class="form-group">
+                            <label for="category">Categoria</label>
+                            <select class="form-control" id="category">
+                                <option>Todos</option>
+                                <option>Alimentos</option>
+                                <option>Kits de Emergência</option>
+                                <option>Ferramentas</option>
+                                <option>Produtos Diversos</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="location">Localização</label>
+                            <select class="form-control" id="location">
+                                <option>Todas</option>
+                                <option>São Paulo</option>
+                                <option>Rio de Janeiro</option>
+                                <option>Belo Horizonte</option>
+                                <option>Curitiba</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Aplicar Filtros</button>
+                    </form>
+                </div>
+
+                <!-- Marketplace Items -->
+                <div class="col-md-9">
+                    <h4>Marketplace</h4>
+                    <div class="row">
+                        <div class="col-md-4 mb-4">
+                            <div class="card">
+                                <img class="card-img-top" src="assets/img/item1.jpg" alt="Item 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Kit de Emergência</h5>
+                                    <p class="card-text">Contém itens básicos para situações de emergência.</p>
+                                    <a href="#" class="btn btn-primary">Ver Detalhes</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <img class="card-img-top" src="assets/img/item2.jpg" alt="Item 2">
-                            <div class="card-body">
-                                <h5 class="card-title">Alimentos Não Perecíveis</h5>
-                                <p class="card-text">Pacote de alimentos variados para distribuição.</p>
-                                <a href="#" class="btn btn-primary">Ver Detalhes</a>
+                        <div class="col-md-4 mb-4">
+                            <div class="card">
+                                <img class="card-img-top" src="assets/img/item2.jpg" alt="Item 2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alimentos Não Perecíveis</h5>
+                                    <p class="card-text">Pacote de alimentos variados para distribuição.</p>
+                                    <a href="#" class="btn btn-primary">Ver Detalhes</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <img class="card-img-top" src="assets/img/item3.jpg" alt="Item 3">
-                            <div class="card-body">
-                                <h5 class="card-title">Ferramentas de Sobrevivência</h5>
-                                <p class="card-text">Conjunto de ferramentas essenciais.</p>
-                                <a href="#" class="btn btn-primary">Ver Detalhes</a>
+                        <div class="col-md-4 mb-4">
+                            <div class="card">
+                                <img class="card-img-top" src="assets/img/item3.jpg" alt="Item 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Ferramentas de Sobrevivência</h5>
+                                    <p class="card-text">Conjunto de ferramentas essenciais.</p>
+                                    <a href="#" class="btn btn-primary">Ver Detalhes</a>
+                                </div>
                             </div>
                         </div>
+                        <!-- Adicione mais itens conforme necessário -->
                     </div>
-                    <!-- Adicione mais itens conforme necessário -->
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3 bg-dark text-white text-center">
+    <footer class="border-top fixed-bottom text-muted">
         <div class="container">
-            <span>&copy; 2024 Mercado Virtual de Resiliência - Conectando Abrigos. Todos os direitos reservados.</span>
+            <div class="row py-3">
+                <div class="col-12 col-md-4 text-center text-md-left">
+                    &copy; 2024 Mercado Virtual de Resiliência - Conectando Abrigos
+                </div>
+                <div class="col-12 col-md-4 text-center text-md-right">
+                    <a href="#" class="text-decoration-none">Política de Privacidade</a>
+                </div>
+            </div>
         </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
